# eueoeo-feed

./: .env.example  .gitignore  Cargo.toml  Dockerfile  config.json.example  package-lock.json  package.json  read_car.js
migrations/: 20230707113228_init.sql
scripts/: publishFeedGen.ts
server/: Cargo.toml
server/src/: algos.rs  config.rs  data.rs  lexicon.rs  subscription.rs
server/src/routes/: stream.rs  well_known.rs  xrpc.rs
src/: atproto_subscription.rs  index.ts  lexicon.rs  lib.rs  main.rs  routes.rs  server.ts  subscription.rs  subscription.ts
src/algos/: eueoeo.rs  eueoeo.ts  index.ts
src/lexicon/types/com/atproto/sync/: subscribeRepos.ts
src/methods/: feed-generation.ts
src/routes/: stream.rs  well_known.rs  xrpc.rs
