[package]
name = "eueoeo-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.71"
axum = { version = "0.7.0", features = ["tokio"] }
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.11.5"
futures-channel = "0.3.28"
futures-util = "0.3.28"
itertools = "0.13.0"
log = "0.4.19"
phf = "0.11.2"
rs-car = "0.4.1"
scc = "1.9.0"
serde = "1.0.167"
serde_bytes = "0.11.11"
serde_ipld_dagcbor = { git = "https://github.com/perlmint/serde_ipld_dagcbor" }
serde_json = "1.0.100"
serde_repr = "0.1.14"
serde_with = { version = "3.0.0", features = ["chrono_0_4"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.3"
tokio = { version = "1.29.1", features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
url = "2.4.0"
